# ecceTERA

./: AUTHORS  CMakeLists.txt  DTLGraph_canonical.sif  INSTALL  README.md  geneTree  speciesTree
html/: AdjMatrix_8h_source.html  AdjTree_8h_source.html  CladeForest_8h_source.html  CladeReconciliation_8h_source.html  CladesAndTripartitions_8cpp.html  CladesAndTripartitions_8h.html  CladesAndTripartitions_8h_source.html  CoEvent_8h_source.html  DTLGraph_8cpp.html  DTLGraph_8h.html  DTLGraph_8h_source.html  DTLMatrixNetwork_8h.html  DTLMatrixNetwork_8h_source.html  DTLMatrixRecalc_8h.html  DTLMatrixRecalc_8h_source.html  DTLMatrixTriplets_8h.html  DTLMatrixTriplets_8h_source.html  DTLMatrix_8h.html  DTLMatrix_8h_source.html  DeCoOutputManager_8h_source.html  DeCoUtils_8h_source.html  EquivalenceClassFamily_8h_source.html  EquivalenceClass_8h_source.html  GeneFamily_8h_source.html  Graph_8h_source.html  IDTLMatrix_8h.html  IDTLMatrix_8h_source.html  MultiRootAdjMatrix_8h_source.html  MultiRootEquivalenceClass_8h_source.html  MyCladesAndTripartitions_8cpp.html  MyCladesAndTripartitions_8h.html  MyCladesAndTripartitions_8h_source.html  MyGeneTree_8cpp.html  MyGeneTree_8h_source.html  MyMatrixAdjSolution_8h_source.html  MyMatrixT_8cpp.html  MyMatrixT_8h_source.html  MyMatrixV_8cpp.html  MyMatrixV_8h_source.html  MyMatrix_8cpp.html  (+194 more)
html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  (+39 more)
scripts/: recon2xml.pl
src/: AdjMatrix.h  AdjMatrix.h.old  AdjTree.h  CMakeLists.txt  CladeForest.h  CladeReconciliation.h  CladesAndTripartitions.cpp  CladesAndTripartitions.h  CoEvent.h  DTLGraph.cpp  DTLGraph.h  DTLMatrix.cpp  DTLMatrix.h  DTLMatrixNetwork.cpp  DTLMatrixNetwork.h  DTLMatrixRecalc.cpp  DTLMatrixRecalc.h  DTLMatrixTriplets.cpp  DTLMatrixTriplets.h  DeCoOutputManager.h  DeCoUtils.h  EquivalenceClass.h  EquivalenceClass.h.old  EquivalenceClassFamily.h  GeneFamily.h  Graph.h  IDTLMatrix.h  MultiRootAdjMatrix.h  MultiRootEquivalenceClass.h  MyCladesAndTripartitions.h  MyGeneTree.cpp  MyGeneTree.h  MyMatrix.cpp  MyMatrix.h  MyMatrixAdjSolution.h  MyMatrixT.cpp  MyMatrixT.h  MyMatrixV.cpp  MyMatrixV.h  MyNetwork.cpp  (+14 more)
src/ext/: CMakeLists.txt
src/ext/boost/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ext/boost/boost/: files.txt
src/ext/boost/boost/atomic/detail/: ops_gcc_x86_dcas.hpp
src/ext/bpp/: CMakeLists.txt
src/ext/bpp/bpp-core/src/: CMakeLists.txt
src/ext/bpp/bpp-core/src/Bpp/Numeric/: AbstractParameterAliasable.cpp
src/ext/bpp/bpp-core/src/Bpp/Numeric/Function/: BrentOneDimension.cpp
src/ext/bpp/bpp-phyl/: CMakeLists.txt
src/ext/bpp/bpp-phyl/src/: CMakeLists.txt
src/ext/bpp/bpp-seq/: CMakeLists.txt
src/ext/bpp/bpp-seq/src/: CMakeLists.txt
src/ext/bpp/bpp-seq/src/Bpp/Seq/: DistanceMatrix.h  Sequence.cpp  Site.cpp  SymbolList.cpp  SymbolListTools.cpp
src/ext/bpp/bpp-seq/src/Bpp/Seq/Alphabet/: BinaryAlphabet.cpp  BinaryAlphabet.h  WordAlphabet.cpp  WordAlphabet.h
src/ext/bpp/bpp-seq/src/Bpp/Seq/Container/: AlignedSequenceContainer.cpp  OrderedSequenceContainer.h  SequenceContainerTools.cpp  SequenceContainerTools.h  VectorSiteContainer.cpp
tests/: HBG284008_1.gtrees  HBG284008_10.gtrees  Stree.tree  StreeBS.tree
